--- a/simple.html
+++ b/simple.html
@@ -5,7 +5,7 @@ Some silly changes from master branch
 -->
 
 <head>
-	<title>Silly changes on master</title>
+	<title>Lots of trouble</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -17,7 +17,6 @@ Some silly changes from master branch
 </head>
 <body>
 	<main class="container">
-	<!-- Junk Filler content -->
 		<p>
 			Just stuff for now,
 			Not sure if we should replace this or not
